// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Activity> hook:styler 1`] = `
<View
  style={
    Array [
      Object {
        "display": "flex",
        "flexDirection": "row",
      },
      Object {
        "alignContent": "flex-start",
      },
      Object {
        "alignItems": "flex-start",
      },
      Object {
        "justifyContent": "flex-start",
      },
      Array [
        Object {
          "marginBottom": 16,
        },
        undefined,
      ],
    ]
  }
>
  <View
    style={
      Object {
        "backgroundColor": undefined,
        "height": 8,
        "marginHorizontal": 4,
        "opacity": 0,
        "width": 8,
      }
    }
  />
  <View
    style={
      Object {
        "backgroundColor": undefined,
        "height": 8,
        "marginHorizontal": 4,
        "opacity": 0,
        "width": 8,
      }
    }
  />
  <View
    style={
      Object {
        "backgroundColor": undefined,
        "height": 8,
        "marginHorizontal": 4,
        "opacity": 0,
        "width": 8,
      }
    }
  />
</View>
`;

exports[`<Activity> renders 1`] = `
<View
  style={
    Array [
      Object {
        "display": "flex",
        "flexDirection": "row",
      },
      Object {
        "alignContent": "flex-start",
      },
      Object {
        "alignItems": "flex-start",
      },
      Object {
        "justifyContent": "flex-start",
      },
      Array [
        undefined,
      ],
    ]
  }
>
  <View
    style={
      Object {
        "backgroundColor": undefined,
        "height": 8,
        "marginHorizontal": 4,
        "opacity": 0,
        "width": 8,
      }
    }
  />
  <View
    style={
      Object {
        "backgroundColor": undefined,
        "height": 8,
        "marginHorizontal": 4,
        "opacity": 0,
        "width": 8,
      }
    }
  />
  <View
    style={
      Object {
        "backgroundColor": undefined,
        "height": 8,
        "marginHorizontal": 4,
        "opacity": 0,
        "width": 8,
      }
    }
  />
</View>
`;

exports[`<Activity> when {color} 1`] = `
<View
  style={
    Array [
      Object {
        "display": "flex",
        "flexDirection": "row",
      },
      Object {
        "alignContent": "flex-start",
      },
      Object {
        "alignItems": "flex-start",
      },
      Object {
        "justifyContent": "flex-start",
      },
      Array [
        undefined,
      ],
    ]
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#e85a7e",
        "height": 8,
        "marginHorizontal": 4,
        "opacity": 0,
        "width": 8,
      }
    }
  />
  <View
    style={
      Object {
        "backgroundColor": "#e85a7e",
        "height": 8,
        "marginHorizontal": 4,
        "opacity": 0,
        "width": 8,
      }
    }
  />
  <View
    style={
      Object {
        "backgroundColor": "#e85a7e",
        "height": 8,
        "marginHorizontal": 4,
        "opacity": 0,
        "width": 8,
      }
    }
  />
</View>
`;

exports[`<Activity> when {size} 1`] = `
<View
  style={
    Array [
      Object {
        "display": "flex",
        "flexDirection": "row",
      },
      Object {
        "alignContent": "flex-start",
      },
      Object {
        "alignItems": "flex-start",
      },
      Object {
        "justifyContent": "flex-start",
      },
      Array [
        undefined,
      ],
    ]
  }
>
  <View
    style={
      Object {
        "backgroundColor": undefined,
        "height": 8,
        "marginHorizontal": 4,
        "opacity": 0,
        "width": 8,
      }
    }
  />
  <View
    style={
      Object {
        "backgroundColor": undefined,
        "height": 8,
        "marginHorizontal": 4,
        "opacity": 0,
        "width": 8,
      }
    }
  />
  <View
    style={
      Object {
        "backgroundColor": undefined,
        "height": 8,
        "marginHorizontal": 4,
        "opacity": 0,
        "width": 8,
      }
    }
  />
</View>
`;

exports[`<Activity> when {style} 1`] = `
<View
  style={
    Array [
      Object {
        "display": "flex",
        "flexDirection": "row",
      },
      Object {
        "alignContent": "flex-start",
      },
      Object {
        "alignItems": "flex-start",
      },
      Object {
        "justifyContent": "flex-start",
      },
      Array [
        Object {
          "backgroundColor": "#62e6ac",
          "padding": 16,
        },
      ],
    ]
  }
>
  <View
    style={
      Object {
        "backgroundColor": undefined,
        "height": 8,
        "marginHorizontal": 4,
        "opacity": 0,
        "width": 8,
      }
    }
  />
  <View
    style={
      Object {
        "backgroundColor": undefined,
        "height": 8,
        "marginHorizontal": 4,
        "opacity": 0,
        "width": 8,
      }
    }
  />
  <View
    style={
      Object {
        "backgroundColor": undefined,
        "height": 8,
        "marginHorizontal": 4,
        "opacity": 0,
        "width": 8,
      }
    }
  />
</View>
`;
